chat container wip

--- a/level2-web/3. Whatsapp Web/style.css
+++ b/level2-web/3. Whatsapp Web/style.css
@@ -4,6 +4,11 @@
 
 .left-container {
     width: 100%;
+    height: 97vh;
+    overflow: auto;
+}
+.left-container.enable {
+    width: 40%;
 }
 
 .product-item {
@@ -11,6 +16,7 @@
     border-bottom: 1px solid #cfcfcf;
     margin: 0.5rem;
     padding: 0.5rem;
+    cursor: pointer;
 }
 
 .active {
@@ -19,6 +25,10 @@
 
 .product-image {
     width: 4rem;
+    height: 4rem;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
 }
 
 .order-date {
@@ -26,6 +36,8 @@
 }
 
 .chat-container {
-    height: 50rem;
-    background-color: red;
+    width: 60%;
+    display: none;
+    /* height: 50rem;
+    background-color: red; */
 }
