--- a/level2-web/3. Whatsapp Web/style.css
+++ b/level2-web/3. Whatsapp Web/style.css
@@ -1,14 +1,23 @@
+body {
+    margin: 0;
+}
+.d-none {
+    display: none !important;
+}
 .main-container {
     display: flex;
 }
 
 .left-container {
     width: 100%;
-    height: 97vh;
-    overflow: auto;
 }
 .left-container.enable {
     width: 40%;
+}
+
+.product-container {
+    overflow: auto;
+    height: 86vh;
 }
 
 .product-item {
@@ -65,6 +74,7 @@
 .msg-container {
     height: 83vh;
     overflow: auto;
+    background-color: #f1f3f6;
 }
 
 .msg-container.blank {
@@ -76,4 +86,19 @@
 .input-msg {
     width: 100%;
     height: 2.5rem;
+}
+
+.chat-text {
+    padding: 0.5rem;
+    border-radius: 6px;
+    margin: 0.5rem 2rem;
+}
+
+.user-chat {
+    background-color: #027CD5;
+    color: white;
+}
+
+.system-chat {
+    /* background-color: #f1f3f6; */
 }
